Add some CSS and HTML

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
                 <h2>Contact</h2>
                 <p>Email: georgestevenmarcell@gmail.com</p>
                 <p>GitHub: <a href="https://github.com/Monkey2580/Projects/tree/main">Monkey2580</a></p>
-                <p>LinkedIn: <a href="https://www.linkedin.com/in/george-steven-marcell-6b293b209/">George Steven Marcell</a></p>
+                <p>LinkedIn: <a href="https://www.linkedin.com/in/george-steven-marcell-6b293b209/">George Steven
+                        Marcell</a></p>
             </section>
         </div>
 
@@ -44,7 +45,7 @@
         <div class="project-container">
             <h2>Projects</h2>
             <div class="project-showcase">
-                <button class="left" onclick="leftClick()">
+                <button class="arrow left" onclick="leftClick()">
                     < </button>
                         <div class="carousel">
                             <div class="project">
@@ -148,16 +149,18 @@
                                     </span>
                             </div>
                         </div>
-                        <button class="right" onclick="rightClick()"> > </button>
+                        <button class="arrow right" onclick="rightClick()">
+                            > </button>
             </div>
         </div>
 
         <div class="technology-container">
             <h2>Technologies</h2>
+            <p> These are the technologies I used so far</p>
             <div class="technology-used">
                 <div class="card">
                     <div class="card-header">
-                        Technologies
+                        Languages
                     </div>
                     <div class="icon-grid">
                         <div class="icon">
@@ -188,7 +191,7 @@
                 </div>
                 <div class="card">
                     <div class="card-header">
-                        Technologies
+                        Backend Frameworks
                     </div>
                     <div class="icon-grid">
                         <div class="icon">
@@ -219,7 +222,69 @@
                 </div>
                 <div class="card">
                     <div class="card-header">
-                        Technologies
+                        Frontend Frameworks
+                    </div>
+                    <div class="icon-grid">
+                        <div class="icon">
+                            <img src="./static/Spring Boot.png" alt="Spring Boot">
+                        </div>
+                        <div class="icon">
+                            <img src="./static/Swagger.png" alt="Swagger">
+                        </div>
+                        <div class="icon">
+                            <img src="./static/MySQL.png" alt="MySQL">
+                        </div>
+                        <div class="icon">
+                            <img src="./static/Postman.png" alt="Postman">
+                        </div>
+                        <div class="icon">
+                            <img src="./static/HTML.png" alt="HTML">
+                        </div>
+                        <div class="icon">
+                            <img src="./static/JS.png" alt="JavaScript">
+                        </div>
+                        <div class="icon">
+                            <img src="./static/CSS.svg" alt="CSS">
+                        </div>
+                        <div class="icon">
+                            <img src="./static/AngularJS.png" alt="AngularJS">
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-header">
+                        Database
+                    </div>
+                    <div class="icon-grid">
+                        <div class="icon">
+                            <img src="./static/Spring Boot.png" alt="Spring Boot">
+                        </div>
+                        <div class="icon">
+                            <img src="./static/Swagger.png" alt="Swagger">
+                        </div>
+                        <div class="icon">
+                            <img src="./static/MySQL.png" alt="MySQL">
+                        </div>
+                        <div class="icon">
+                            <img src="./static/Postman.png" alt="Postman">
+                        </div>
+                        <div class="icon">
+                            <img src="./static/HTML.png" alt="HTML">
+                        </div>
+                        <div class="icon">
+                            <img src="./static/JS.png" alt="JavaScript">
+                        </div>
+                        <div class="icon">
+                            <img src="./static/CSS.svg" alt="CSS">
+                        </div>
+                        <div class="icon">
+                            <img src="./static/AngularJS.png" alt="AngularJS">
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-header">
+                        Tools
                     </div>
                     <div class="icon-grid">
                         <div class="icon">
