--- a/index.html
+++ b/index.html
@@ -164,28 +164,19 @@
                     </div>
                     <div class="icon-grid">
                         <div class="icon">
-                            <img src="./static/Spring Boot.png" alt="Spring Boot">
+                            <img src="./static/Java.png" alt="Java">
                         </div>
                         <div class="icon">
-                            <img src="./static/Swagger.png" alt="Swagger">
+                            <img src="./static/Python.png" alt="Python">
                         </div>
                         <div class="icon">
-                            <img src="./static/MySQL.png" alt="MySQL">
+                            <img src="./static/PHP.svg" alt="PHP">
                         </div>
                         <div class="icon">
-                            <img src="./static/Postman.png" alt="Postman">
+                            <img src="./static/cSharp.png" alt="cSharp">
                         </div>
                         <div class="icon">
-                            <img src="./static/HTML.png" alt="HTML">
-                        </div>
-                        <div class="icon">
-                            <img src="./static/JS.png" alt="JavaScript">
-                        </div>
-                        <div class="icon">
-                            <img src="./static/CSS.svg" alt="CSS">
-                        </div>
-                        <div class="icon">
-                            <img src="./static/AngularJS.png" alt="AngularJS">
+                            <img src="./static/JS.png" alt="JS">
                         </div>
                     </div>
                 </div>
@@ -198,25 +189,16 @@
                             <img src="./static/Spring Boot.png" alt="Spring Boot">
                         </div>
                         <div class="icon">
-                            <img src="./static/Swagger.png" alt="Swagger">
+                            <img src="./static/ASP.NET.png" alt="ASP.NET.png">
                         </div>
                         <div class="icon">
-                            <img src="./static/MySQL.png" alt="MySQL">
+                            <img src="./static/Laravel.png" alt="Laravel">
                         </div>
                         <div class="icon">
-                            <img src="./static/Postman.png" alt="Postman">
+                            <img src="./static/Django.png" alt="Django">
                         </div>
                         <div class="icon">
-                            <img src="./static/HTML.png" alt="HTML">
-                        </div>
-                        <div class="icon">
-                            <img src="./static/JS.png" alt="JavaScript">
-                        </div>
-                        <div class="icon">
-                            <img src="./static/CSS.svg" alt="CSS">
-                        </div>
-                        <div class="icon">
-                            <img src="./static/AngularJS.png" alt="AngularJS">
+                            <img src="./static/ExpressJs.png" alt="ExpressJs">
                         </div>
                     </div>
                 </div>
