--- a/index.html
+++ b/index.html
@@ -18,13 +18,23 @@
             <p>
                 An aspiring Fullstack / Backed Developer (Backend Heavy).
             </p>
-            <section>
-                <h2>Contact</h2>
-                <p>Email: georgestevenmarcell@gmail.com</p>
-                <p>GitHub: <a href="https://github.com/Monkey2580/Projects/tree/main">Monkey2580</a></p>
-                <p>LinkedIn: <a href="https://www.linkedin.com/in/george-steven-marcell-6b293b209/">George Steven
-                        Marcell</a></p>
-            </section>
+            <div class="contact">
+                <h3>Contact</h3>
+                <div class="contact-row">
+                    <div class="contact-item">
+                        <img src="./static/email.svg" alt="Email" class="contact-icon">
+                        <a href="mailto:georgestevenmarcell@gmail.com">georgestevenmarcell@gmail.com</a>
+                    </div>
+                    <div class="contact-item">
+                        <img src="./static/github.svg" alt="GitHub" class="contact-icon">
+                        <a href="https://github.com/Monkey2580" target="_blank">Monkey2580</a>
+                    </div>
+                    <div class="contact-item">
+                        <img src="./static/LinkedIn.svg" alt="LinkedIn" class="contact-icon">
+                        <a href="https://www.linkedin.com/in/george-steven-marcell-6b293b209/" target="_blank">George Steven Marcell</a>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <div class="header">
@@ -35,11 +45,16 @@
 
         <div class="about-me">
             <h2>About Me</h2>
-            My experience over the years has equipped me with the skills to work with various programming languages,
-            frameworks, databases, and other technologies that support my work,
-            such as Node.js, Express.js, React, Java, Python, ASP.NET, Oracle, and more. I enjoy learning new
-            technologies that help with my work and enhance my skills as a developer, allowing me to be versatile with
-            the projects I am working on or assigned to.
+            <p>
+                My experience over the years has equipped me with the skills to work with various programming languages,
+                frameworks, databases, and other technologies that support my work,
+                such as Node.js, Express.js, React, Java, Python, ASP.NET, Oracle, and more. 
+            </p>
+            <p>
+                I enjoy learning new
+                technologies that help with my work and enhance my skills as a developer, allowing me to be versatile with
+                the projects I am working on or assigned to.
+            </p>
         </div>
 
         <div class="project-container">
@@ -54,13 +69,13 @@
                                 <p>I created a portfolio website, a simple one to showcase my projects i done and the
                                     project i handle at my work over the years.</p>
                                 <span class="footer-project">
-                                    <span class="footer-project-img" data-tooltip="HTML Project">
+                                    <span class="footer-project-img" data-tooltip="HTML">
                                         <img src="./static/HTML.png" alt="HTML">
                                     </span>
-                                    <span class="footer-project-img" data-tooltip="JavaScript Project">
+                                    <span class="footer-project-img" data-tooltip="JavaScript">
                                         <img src="./static/JS.png" alt="JavaScript">
                                     </span>
-                                    <span class="footer-project-img" data-tooltip="CSS Project">
+                                    <span class="footer-project-img" data-tooltip="CSS">
                                         <img src="./static/CSS.svg" alt="CSS">
                                     </span>
                                 </span>
@@ -165,18 +180,27 @@
                     <div class="icon-grid">
                         <div class="icon">
                             <img src="./static/Java.png" alt="Java">
+                            <span class="tooltip">Java</span>
                         </div>
                         <div class="icon">
                             <img src="./static/Python.png" alt="Python">
+                            <span class="tooltip">Python</span>
                         </div>
                         <div class="icon">
                             <img src="./static/PHP.svg" alt="PHP">
+                            <span class="tooltip">PHP</span>
                         </div>
                         <div class="icon">
                             <img src="./static/cSharp.png" alt="cSharp">
+                            <span class="tooltip">cSharp</span>
                         </div>
                         <div class="icon">
                             <img src="./static/JS.png" alt="JS">
+                            <span class="tooltip">JS</span>
+                        </div>
+                        <div class="icon">
+                            <img src="./static/GoLang.png" alt="GoLang">
+                            <span class="tooltip">GoLang</span>
                         </div>
                     </div>
                 </div>
@@ -187,18 +211,27 @@
                     <div class="icon-grid">
                         <div class="icon">
                             <img src="./static/Spring Boot.png" alt="Spring Boot">
+                            <span class="tooltip">Spring Boot</span>
                         </div>
                         <div class="icon">
-                            <img src="./static/ASP.NET.png" alt="ASP.NET.png">
+                            <img src="./static/ASP.NET.png" alt="ASP.NET">
+                            <span class="tooltip">ASP.NET</span>
                         </div>
                         <div class="icon">
                             <img src="./static/Laravel.png" alt="Laravel">
+                            <span class="tooltip">Laravel</span>
                         </div>
                         <div class="icon">
                             <img src="./static/Django.png" alt="Django">
+                            <span class="tooltip">Django</span>
                         </div>
                         <div class="icon">
                             <img src="./static/ExpressJs.png" alt="ExpressJs">
+                            <span class="tooltip">ExpressJs</span>
+                        </div>
+                        <div class="icon">
+                            <img src="./static/NodeJS.png" alt="NodeJS">
+                            <span class="tooltip">NodeJS</span>
                         </div>
                     </div>
                 </div>
@@ -208,28 +241,24 @@
                     </div>
                     <div class="icon-grid">
                         <div class="icon">
-                            <img src="./static/Spring Boot.png" alt="Spring Boot">
-                        </div>
-                        <div class="icon">
-                            <img src="./static/Swagger.png" alt="Swagger">
-                        </div>
-                        <div class="icon">
-                            <img src="./static/MySQL.png" alt="MySQL">
-                        </div>
-                        <div class="icon">
-                            <img src="./static/Postman.png" alt="Postman">
-                        </div>
-                        <div class="icon">
-                            <img src="./static/HTML.png" alt="HTML">
-                        </div>
-                        <div class="icon">
-                            <img src="./static/JS.png" alt="JavaScript">
-                        </div>
-                        <div class="icon">
-                            <img src="./static/CSS.svg" alt="CSS">
-                        </div>
-                        <div class="icon">
                             <img src="./static/AngularJS.png" alt="AngularJS">
+                            <span class="tooltip">AngularJS</span>
+                        </div>
+                        <div class="icon">
+                            <img src="./static/ReactJs.png" alt="ReactJs">
+                            <span class="tooltip">ReactJs</span>
+                        </div>
+                        <div class="icon">
+                            <img src="./static/NextJs.png" alt="NextJs">
+                            <span class="tooltip">NextJs</span>
+                        </div>
+                        <div class="icon">
+                            <img src="./static/Tailwind.png" alt="Tailwind">
+                            <span class="tooltip">Tailwind</span>
+                        </div>
+                        <div class="icon">
+                            <img src="./static/Bootstrap.png" alt="Bootstrap">
+                            <span class="tooltip">Bootstrap</span>
                         </div>
                     </div>
                 </div>
@@ -239,28 +268,20 @@
                     </div>
                     <div class="icon-grid">
                         <div class="icon">
-                            <img src="./static/Spring Boot.png" alt="Spring Boot">
-                        </div>
-                        <div class="icon">
-                            <img src="./static/Swagger.png" alt="Swagger">
+                            <img src="./static/MongoDB.png" alt="MongoDB">
+                            <span class="tooltip">MongoDB</span>
                         </div>
                         <div class="icon">
                             <img src="./static/MySQL.png" alt="MySQL">
+                            <span class="tooltip">MySQL</span>
                         </div>
                         <div class="icon">
-                            <img src="./static/Postman.png" alt="Postman">
+                            <img src="./static/Oracle.png" alt="Oracle">
+                            <span class="tooltip">Oracle</span>
                         </div>
                         <div class="icon">
-                            <img src="./static/HTML.png" alt="HTML">
-                        </div>
-                        <div class="icon">
-                            <img src="./static/JS.png" alt="JavaScript">
-                        </div>
-                        <div class="icon">
-                            <img src="./static/CSS.svg" alt="CSS">
-                        </div>
-                        <div class="icon">
-                            <img src="./static/AngularJS.png" alt="AngularJS">
+                            <img src="./static/PostgreSQL.png" alt="Postman">
+                            <span class="tooltip">Postman</span>
                         </div>
                     </div>
                 </div>
@@ -270,28 +291,32 @@
                     </div>
                     <div class="icon-grid">
                         <div class="icon">
-                            <img src="./static/Spring Boot.png" alt="Spring Boot">
+                            <img src="./static/Docker.png" alt="Docker">
+                            <span class="tooltip">Docker</span>
                         </div>
                         <div class="icon">
-                            <img src="./static/Swagger.png" alt="Swagger">
-                        </div>
-                        <div class="icon">
-                            <img src="./static/MySQL.png" alt="MySQL">
+                            <img src="./static/Github.png" alt="Github">
+                            <span class="tooltip">Github</span>
                         </div>
                         <div class="icon">
                             <img src="./static/Postman.png" alt="Postman">
+                            <span class="tooltip">Postman</span>
                         </div>
                         <div class="icon">
-                            <img src="./static/HTML.png" alt="HTML">
+                            <img src="./static/Jenkins.png" alt="Postman">
+                            <span class="tooltip">Postman</span>
                         </div>
                         <div class="icon">
-                            <img src="./static/JS.png" alt="JavaScript">
+                            <img src="./static/OCP.svg" alt="OCP">
+                            <span class="tooltip">OCP</span>
                         </div>
                         <div class="icon">
-                            <img src="./static/CSS.svg" alt="CSS">
+                            <img src="./static/Kibana.svg" alt="Kibana">
+                            <span class="tooltip">Kibana</span>
                         </div>
                         <div class="icon">
-                            <img src="./static/AngularJS.png" alt="AngularJS">
+                            <img src="./static/SocketIo.svg" alt="Kibana">
+                            <span class="tooltip">Kibana</span>
                         </div>
                     </div>
                 </div>
