Fix some things

--- a/index.html
+++ b/index.html
@@ -280,8 +280,8 @@
                             <span class="tooltip">Oracle</span>
                         </div>
                         <div class="icon">
-                            <img src="./static/PostgreSQL.png" alt="Postman">
-                            <span class="tooltip">Postman</span>
+                            <img src="./static/PostgreSQL.png" alt="PostgreSQL">
+                            <span class="tooltip">PostgreSQL</span>
                         </div>
                     </div>
                 </div>
@@ -303,8 +303,8 @@
                             <span class="tooltip">Postman</span>
                         </div>
                         <div class="icon">
-                            <img src="./static/Jenkins.png" alt="Postman">
-                            <span class="tooltip">Postman</span>
+                            <img src="./static/Jenkins.png" alt="Jenkins">
+                            <span class="tooltip">Jenkins</span>
                         </div>
                         <div class="icon">
                             <img src="./static/OCP.svg" alt="OCP">
@@ -315,8 +315,12 @@
                             <span class="tooltip">Kibana</span>
                         </div>
                         <div class="icon">
-                            <img src="./static/SocketIo.svg" alt="Kibana">
-                            <span class="tooltip">Kibana</span>
+                            <img src="./static/SocketIo.svg" alt="SocketIo">
+                            <span class="tooltip">SocketIo</span>
+                        </div>
+                        <div class="icon">
+                            <img src="./static/Swagger.png" alt="Swagger">
+                            <span class="tooltip">Swagger</span>
                         </div>
                     </div>
                 </div>
