Change some things

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     </div>
                     <div class="contact-item">
                         <img src="./static/github.svg" alt="GitHub" class="contact-icon">
-                        <a href="https://github.com/Monkey2580" target="_blank">Monkey2580</a>
+                        <a href="https://github.com/GeorgeStevenMarcell" target="_blank">GeorgeStevenMarcell</a>
                     </div>
                     <div class="contact-item">
                         <img src="./static/LinkedIn.svg" alt="LinkedIn" class="contact-icon">
